--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aashish Gulshan | Software Engineer</title>
-    <meta name="description" content="Portfolio of Aashish Gulshan, a skilled software engineer specializing in web development, React.js, and modern technologies." />
+    <title>Aashish Gulshan | Full Stack Developer (React, Node.js)</title>
+    <meta
+      name="description"
+      content="Aashish Gulshan is a Full Stack Developer with 2+ years of experience in React, Node.js, TypeScript, and modern web applications."
+    />
     <meta name="theme-color" content="#9333EA" />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Aashish Gulshan",
+        "url": "https://aashishgulshan.netlify.app",
+        "jobTitle": "Full Stack Developer",
+        "sameAs": [
+          "https://www.linkedin.com/in/aashishgulshan",
+          "https://github.com/aashishgulshan"
+        ]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
